# 10x-nad-ch

./: .cfignore  .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .profile  Dockerfile  README.md  compose.yml  conftest.py  manifest-dev.yml  pyproject.toml  requirements.txt  sample.env  start_app.sh  start_local.sh  web.py
.github/workflows/: ci.yaml  deploy-dev.yml
alembic/: env.py
alembic/versions/: 1970cbb30227_create_reports_table.py  342dce4f5753_rename_data_providers_to_data_producers.py  3ff8e29d705e_add_name_field_to_data_submissions_table.py  4ad25b043abe_add_roles_table.py  558f8d429963_rename_data_submissions_field.py  68982ccf2c7c_add_column_map_model.py  851709d3a162_add_report_column.py  945ca77479d1_create_users_table.py  9bb8e29b98fa_user_dataproducer_relationship.py  a511ca087149_add_datasubmission_status_column.py  a6db87212637_create_data_providers_table.py  c5596492c87b_create_data_submissions_table.py  dc3dd97eae46_remove_username_column_from_users_table.py
data/landing_zone/: README.md
documentation/: phase-3-running-locally.md  phase-3-technical-recap.md  terminology.md
documentation/adr/: 0001-record-architecture-decisions.md  0002-use-python-as-primary-language.md  0003-use-sqlalchemy-as-orm.md  0004-hande-gis-data-processing-via-task-queue.md
documentation/architecture/: README.md
documentation/artifacts/: README.md  mapping_template_filled_out.csv
nad_ch/: application_context.py  cli.py  config.py  entities.py  main.py  presenters.py  repositories.py  use_cases.py  web.py
nad_ch/application/: data_handler.py  data_reader.py  dtos.py  exceptions.py  interfaces.py  use_cases.py  validation.py  view_models.py
nad_ch/application/nad_column_maps/: default.yaml  testprovider1.yaml
nad_ch/application/use_cases/: admin.py  auth.py  column_maps.py  data_producers.py  data_submissions.py
nad_ch/application/validation_files/: required_fields.yaml
nad_ch/config/: __init__.py  base.py  development_local.py  development_remote.py  test.py
nad_ch/controllers/: cli.py
nad_ch/controllers/web/: .eslintrc.js  flask.py  package-lock.json  package.json  routes.py  tsconfig.json  webpack.config.js
nad_ch/core/: entities.py  repositories.py
nad_ch/domain/: entities.py  repositories.py
nad_ch/gateways/: storage_mock.py
nad_ch/infrastructure/: auth.py  database.py  logger.py  storage.py  task_queue.py
nad_ch/interfaces/: storage.py
scripts/: activate_user.py  cloud_gov_setup.sh  demo_seed_1.py  demo_seed_2.py  format.py  init_db.py  init_dev_db.py  migrate_down.py  migrate_up.py  seed.py  seed_roles_and_permissions.py  seed_users.py  start.sh
tests/: factories.py  fakes.py  fakes_and_mocks.py  fixtures.py  mocks.py  test_use_cases.py
tests/application/: test_data_handler.py  test_data_reader.py  test_dto.py  test_use_cases.py  test_validation.py  test_view_models.py
tests/application/use_cases/: __init__.py  test_admin.py  (+4 more)
tests/controllers/: test_web.py
tests/core/: test_entities.py
tests/domain/: test_entities.py
tests/infrastructure/: test_auth.py  test_database.py  test_task_queue.py
tests/test_data/: baselines.py  config_baselines.py
(+170 files in other folders)
