[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nad_ch"
version = "0.1.0"
description = "10x National Address Database Collaboration Hub (NAD-CH)"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
sqlalchemy = "^2.0.23"
pytest-env = "^1.1.3"
logging = "^0.4.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
coverage = "^7.3.2"
python-dotenv = "^1.0.0"
pytest-mock = "^3.12.0"
black = "^23.12.1"

[tool.poetry.scripts]
init-db="scripts.init_db:main"
format = "scripts.format:main"
lint = "flake8.main.cli:main"
start = "nad_ch.main:main"
test = "pytest:main"

[tool.pytest.ini_options]
env = [
    "APP_ENV=test",
    "DATABASE_URL=sqlite:///:memory:"
]

[tool.flake8]
max-line-length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

